Fix hardcoded region in aws pre-reqs config file

--- a/charts/all/portworx/templates/aws-prereqs/px-aws-prereqs-cm.yaml
+++ b/charts/all/portworx/templates/aws-prereqs/px-aws-prereqs-cm.yaml
@@ -24,7 +24,8 @@ data:
       echo "Found AWS credential secret, building credentials file."
       AWS_ACCESS_KEY=$(curl -sSk -H "Authorization: Bearer $(cat /run/secrets/kubernetes.io/serviceaccount/token)" https://$KUBERNETES_SERVICE_HOST:$KUBERNETES_PORT_443_TCP_PORT/api/v1/namespaces/kube-system/secrets/aws-creds | jq -r '.data.aws_access_key_id' | base64 -d)
       AWS_SECRET_KEY=$(curl -sSk -H "Authorization: Bearer $(cat /run/secrets/kubernetes.io/serviceaccount/token)" https://$KUBERNETES_SERVICE_HOST:$KUBERNETES_PORT_443_TCP_PORT/api/v1/namespaces/kube-system/secrets/aws-creds | jq -r '.data.aws_secret_access_key' | base64 -d)
-
+      NODE_REG=$(oc get node -l 'node-role.kubernetes.io/worker=' -o=jsonpath='{.items[0].metadata.name}')
+      AWS_REGION=$(oc get node $NODE_REG -o jsonpath='{.metadata.labels.topology\.kubernetes\.io/region}')
     cat << EOF >> /pattern-home/credentials/.aws/credentials
     [default]
     aws_access_key_id = $AWS_ACCESS_KEY
@@ -33,7 +34,7 @@ data:
 
     cat << EOF >> /pattern-home/credentials/.aws/config
     [default]
-    region = us-east-1
+    region = $AWS_REGION
     output = json
     EOF
 
