--- a/values-hub.yaml
+++ b/values-hub.yaml
@@ -9,6 +9,7 @@ clusterGroup:
     - config-demo
     - hello-world
     - portworx
+    - portworx-demo
 
   subscriptions:
     acm:
@@ -28,6 +29,7 @@ clusterGroup:
     - config-demo
     - hello-world
     - portworx
+    - portworx-demo
 
   applications:
     acm:
@@ -71,6 +73,11 @@ clusterGroup:
       project: portworx
       path: charts/all/portworx
 
+    portworx-demo:
+      name: portworx-demo
+      namespace: portworx-demo
+      project: portworx
+      path: charts/all/portworx-demo
 
   imperative:
     # NOTE: We *must* use lists and not hashes. As hashes lose ordering once parsed by helm
