--- a/values-hub.yaml
+++ b/values-hub.yaml
@@ -6,6 +6,8 @@ clusterGroup:
     - open-cluster-management
     - vault
     - golang-external-secrets
+    - config-demo
+    - hello-world
     - portworx
     - portworx-demo
 
@@ -24,6 +26,8 @@ clusterGroup:
 
   projects:
     - hub
+    - config-demo
+    - hello-world
     - portworx
     - portworx-demo
 
@@ -63,6 +67,18 @@ clusterGroup:
       project: portworx
       path: charts/all/portworx-demo
 
+    config-demo:
+      name: config-demo
+      namespace: config-demo
+      project: config-demo
+      path: charts/all/config-demo
+
+    hello-world:
+      name: hello-world
+      namespace: hello-world
+      project: hello-world
+      path: charts/all/hello-world
+
   imperative:
     # NOTE: We *must* use lists and not hashes. As hashes lose ordering once parsed by helm
     # The default schedule is every 10 minutes: imperative.schedule
@@ -70,12 +86,12 @@ clusterGroup:
     # imagePullPolicy is set to always: imperative.imagePullPolicy
     # For additional overrides that apply to the jobs, please refer to
     # https://hybrid-cloud-patterns.io/imperative-actions/#additional-job-customizations
-    #jobs:
-    #- name: hello-world
+    jobs:
+    - name: hello-world
       # ansible playbook to be run
-      #playbook: common/ansible/playbooks/hello-world/hello-world.yaml
+      playbook: common/ansible/playbooks/hello-world/hello-world.yaml
       # per playbook timeout in seconds
-      #timeout: 234
+      timeout: 234
       # verbosity: "-v"
 
   managedClusterGroups:
