--- a/charts/all/portworx-demo/templates/rbac/role-ns.yaml
+++ b/charts/all/portworx-demo/templates/rbac/role-ns.yaml
@@ -7,6 +7,6 @@ metadata:
   namespace: {{ .Values.namespace }} 
   name: portworx-demo-ns-role
 rules:
-- apiGroups: [""]
+- apiGroups: ["*"]
   resources: ["*"]
   verbs: ["*"]
