--- a/charts/all/portworx-demo/templates/wait-for-pxe.yaml
+++ b/charts/all/portworx-demo/templates/wait-for-pxe.yaml
@@ -14,18 +14,18 @@ spec:
         - /bin/bash
         - -c
         - |
-          stc_status=$(oc get stc -n {{ .Values.namespace }} | grep Online | wc -l)
+          stc_status=$(oc get stc -n {{ .Values.pxnamespace }} | grep Online | wc -l)
           until [ "$stc_status" -eq "1" ];
           do
             echo "Portworx storagecluster not yet online"
             sleep 10
-            stc_status=$(oc get stc -n {{ .Values.namespace }} | grep Online | wc -l)
+            stc_status=$(oc get stc -n {{ .Values.pxnamespace }} | grep Online | wc -l)
           done
           echo "Portworx storagecluster online, waiting for all containers to start"
-          num_px_pods=$(oc get pod -l name=portworx -n {{ .Values.namespace }} | wc -l)
+          num_px_pods=$(oc get pod -l name=portworx -n {{ .Values.pxnamespace }} | wc -l)
           while [ 1 ];
           do
-            num_px_pods_ready=$(oc get pod -l name=portworx -n {{ .Values.namespace }} |grep -P '\s+([1-9]+[\d]*)\/\1\s+' | wc -l)
+            num_px_pods_ready=$(oc get pod -l name=portworx -n {{ .Values.pxnamespace }} |grep -P '\s+([1-9]+[\d]*)\/\1\s+' | wc -l)
             if [ "$num_px_pods_ready" -eq "$num_px_pods" ]; then
               echo "Portworx is ready, $num_px_pods_ready of $num_px_pods pods running 2/2"
               exit 0
