--- a/charts/all/portworx-demo/templates/rbac/rolebinding-ns.yaml
+++ b/charts/all/portworx-demo/templates/rbac/rolebinding-ns.yaml
@@ -9,7 +9,7 @@ subjects:
 - kind: ServiceAccount
   name: portworx-demo-sa
   namespace: {{ .Values.namespace }}
-  apiGroup: ""
+  apiGroup: "*"
 roleRef:
   kind: Role
   name: portworx-demo-ns-role
