--- a/charts/all/portworx-demo/templates/rbac/clusterrolebinding.yaml
+++ b/charts/all/portworx-demo/templates/rbac/clusterrolebinding.yaml
@@ -1,16 +1,16 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
-  name: portworx-demo-px-ns-rolebinding
+  name: portworx-demo-clusterrolebinding
   annotations:
     argocd.argoproj.io/hook: PreSync
     argocd.argoproj.io/sync-wave: "-15"
 subjects:
 - kind: ServiceAccount
   name: portworx-demo-sa
-  namespace: {{ .Values.pxnamespace }}
-  apiGroup: "*"
+  namespace: {{ .Values.namespace }}
+  apiGroup: ""
 roleRef:
   kind: Role
-  name: portworx-demo-px-ns-role
+  name: portworx-demo-clusterrole
   apiGroup: rbac.authorization.k8s.io
