--- a/charts/all/portworx-demo/templates/rbac/clusterrole.yaml
+++ b/charts/all/portworx-demo/templates/rbac/clusterrole.yaml
@@ -1,10 +1,9 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+kind: ClusterRole
 metadata:
   annotations:
     argocd.argoproj.io/hook: PreSync
     argocd.argoproj.io/sync-wave: "-15"
-  namespace: {{ .Values.pxnamespace }} 
   name: portworx-demo-clusterrole
 rules:
 - apiGroups: ["*"]
