Fix bash loop syntax

--- a/charts/all/portworx-demo/templates/rwo-demo/pg-statefulset.yaml
+++ b/charts/all/portworx-demo/templates/rwo-demo/pg-statefulset.yaml
@@ -26,7 +26,7 @@ spec:
           while [ 1 ];
           do
             pg_isready
-            if [ "$?" -eq "0" ]
+            if [ "$?" -eq "0" ]; then
               echo "Postgres ready for connections"
               createdb -U admin sampledb
               pgbench -U admin -i -s 70 sampledb
