Add pgbench sidecar

--- a/charts/all/portworx-demo/templates/rwo-demo/pg-statefulset.yaml
+++ b/charts/all/portworx-demo/templates/rwo-demo/pg-statefulset.yaml
@@ -32,3 +32,11 @@ spec:
       - name: postgresdb
         persistentVolumeClaim:
           claimName: rwo-demo-postgres-data
+      - name: pgbench-sidecar
+        image: postgres:14.1-alpine
+        command:
+        - /bin/bash
+        - -c
+        - |
+          pg_isready -U admin -d sampledb -h 127.0.0.1
+          echo $?
