--- a/charts/all/portworx-demo/templates/rwo-demo/pg-statefulset.yaml
+++ b/charts/all/portworx-demo/templates/rwo-demo/pg-statefulset.yaml
@@ -23,7 +23,11 @@ spec:
         - /bin/bash
         - -c
         - |
-          pg_isready -U admin -h 127.0.0.1
+          sleep 30
+          pg_isready -h 127.0.0.1
+          createdb -U admin sampledb
+          pgbench -U admin -i -s 70 sampledb
+          pgbench -U admin -c 1 -j 1 -T 60
           echo $?
       - name: postgres
         image: postgres:14.1-alpine
