--- a/charts/all/portworx-demo/templates/rwx-demo/busybox-writer-sts.yaml
+++ b/charts/all/portworx-demo/templates/rwx-demo/busybox-writer-sts.yaml
@@ -1,11 +1,11 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "8"
   labels:
     app: shared-demo
-  name: shared-busybox
+  name: shared-busybox-demo
   namespace: {{ .Values.namespace }}
 spec:
   replicas: 3
@@ -24,7 +24,6 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - image: busybox
-        imagePullPolicy: Always
         name: busybox-writer
         volumeMounts:
         - name: shared-vol
@@ -36,7 +35,7 @@ spec:
           - |
             i=0
             until [ "$i" -eq "120" ]; do
-              echo -e "{\"time\":\$(date +%H:%M:%S),\"hostname\":\$(hostname) writing to shared vol }""\n" >> /mnt/shared.log
+              echo -e "{"time":$(date +%H:%M:%S),"hostname":$(hostname) writing to shared vol }""\n" >> /mnt/shared.log
               sleep 1
               i=$((i+1))
             done
