--- a/charts/all/portworx-demo/templates/rwx-demo/busybox-writer-sts.yaml
+++ b/charts/all/portworx-demo/templates/rwx-demo/busybox-writer-sts.yaml
@@ -35,7 +35,7 @@ spec:
           - |
             i=0
             until [ "$i" -eq "120" ]; do
-              echo -e "{"time":$(date +%H:%M:%S),"hostname":$(hostname) writing to shared vol }""\n" >> /mnt/shared.log
+              echo -e ""time":$(date +%H:%M:%S),"hostname":$(hostname) writing to shared vol" >> /mnt/shared.log
               sleep 1
               i=$((i+1))
             done
