--- a/charts/all/portworx-demo/templates/rwx-demo/busybox-reader.yaml
+++ b/charts/all/portworx-demo/templates/rwx-demo/busybox-reader.yaml
@@ -25,4 +25,5 @@ spec:
       - |
         echo "Sleeping for 120 seconds for writers to populate file"
         sleep 120
-        tail -f /mnt/shared.log
+        tail -n 400 /mnt/shared.log
+        sleep infinity
