--- a/charts/all/portworx-demo/templates/wait-for-pxe.yaml
+++ b/charts/all/portworx-demo/templates/wait-for-pxe.yaml
@@ -14,12 +14,12 @@ spec:
         - /bin/bash
         - -c
         - |
-          stc_status=$(oc get stc -n {{ .Values.pxnamespace }} | grep Online | wc -l)
+          stc_status=$(oc get stc -n {{ .Values.pxnamespace }} | grep Running | wc -l)
           until [ "$stc_status" -eq "1" ];
           do
             echo "Portworx storagecluster not yet online"
             sleep 10
-            stc_status=$(oc get stc -n {{ .Values.pxnamespace }} | grep Online | wc -l)
+            stc_status=$(oc get stc -n {{ .Values.pxnamespace }} | grep Running | wc -l)
           done
           echo "Portworx storagecluster online, waiting for all containers to start"
           num_px_pods=$(oc get pod -l name=portworx -n {{ .Values.pxnamespace }} --no-headers | wc -l)
